# dotblue

./: .gitignore  CMakeLists.txt  DotBlueConfig.cmake.in  readme.md
build-tools/: setup-game-project.py
examples/: GLMExample.cpp  InputExample.cpp
game-template/: CMakeLists.txt
game-template/src/: GameBase.cpp  GameBase.h  main.cpp
games/Kosmos/: CMakeLists.txt
games/Kosmos/shaders/: passthrough.vert  textured.vert
games/Kosmos/src/: Asteroid.cpp  AsteroidRender.cpp  FileSystem.cpp  GameBase.cpp  GameBase.h  IniFile.cpp  KosmosBase.h  Perlin.cpp  Voxel.cpp  main.cpp  sdl_main.cpp
games/SpaceGame/: CMakeLists.txt  CMakeLists_new.txt  imgui.ini
games/SpaceGame/shaders/: passthrough.frag  textured.frag
games/SpaceGame/src/: GameBase.cpp  GameBase.h  KosmosBase.cpp  KosmosBase.h  main.cpp  main.cpp.backup  main_hybrid.cpp  main_minimal.cpp
include/DotBlue/: ColourConsole.h  DotBlue.h  GLPlatform.h  Input.h  MemChunkAllocator.h  SmoothRenderer.h  ThreadedRenderer.h
shaders/: passthrough.vert
src/: DotBlue.cpp  GLCamera.cpp  GLImage.cpp  GLMath.cpp  GLPlatform.cpp  GLPlatformUnix.cpp  GLPlatformWin32.cpp  GLPrintf.cpp  GLShader.cpp  GLTextureAtlas.cpp  Input.cpp  MemChunkAllocator.cpp  SmoothRenderer.cpp  ThreadedRenderer.cpp
src/backends/: imgui_impl_sdl2.cpp
test/: main.cpp
